started work on fixing responsiveness, calendar dates still overlap with event info tho

--- a/src/app/events/Events.module.css
+++ b/src/app/events/Events.module.css
@@ -1,3 +1,9 @@
+.calendarWrapper {
+  padding: 1rem;
+  grid-column: span 2 / span 2;
+  min-width: 500px;
+}
+
 .calendar {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
@@ -61,6 +67,12 @@
 .calendarHeader .day {
   font-size: 1rem;
   color: #ffffff;
+}
+
+.eventInfoWrapper {
+  padding: 1rem;
+  grid-column: span 1 / span 1;
+  /* min-width: 300px; */
 }
 
 .eventInfoContainer {
